[gd_scene load_steps=5 format=3 uid="uid://roac62ilngx6"]

[ext_resource type="Script" uid="uid://cesnptj2fpfod" path="res://RPG-test/QuestsMenu.gd" id="1_quests"]
[ext_resource type="Texture2D" uid="uid://bg1eybwk7p477" path="res://RPG-test/sprites/bouton_test.png" id="2_bouton"]
[ext_resource type="FontFile" uid="uid://cv8fr2efk7sj" path="res://m5x7.ttf" id="3_font"]

[sub_resource type="Theme" id="Theme_1"]
default_font = ExtResource("3_font")
default_font_size = 18

[node name="QuestsMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_quests")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/CenterContainer"]
custom_minimum_size = Vector2(800, 550)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1")

[node name="TitleLabel" type="Label" parent="Control/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "QUÊTES ACTIVES"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestsList" type="VBoxContainer" parent="Control/CenterContainer/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NoQuestsLabel" type="Label" parent="Control/CenterContainer/Panel/VBoxContainer/ScrollContainer/QuestsList"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Aucune quête active"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="Control/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Control/CenterContainer/Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RetourButton" type="TextureButton" parent="Control/CenterContainer/Panel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
texture_normal = ExtResource("2_bouton")
stretch_mode = 5

[node name="RetourLabel" type="Label" parent="Control/CenterContainer/Panel/VBoxContainer/ButtonContainer/RetourButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "RETOUR"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/CenterContainer/Panel/VBoxContainer/ButtonContainer/RetourButton" to="." method="_on_retour_pressed"]
